# ambient-toolbox

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  README.md  SECURITY.md  feature.md  pyproject.toml  settings.py  setup.cfg
.ambient-package-update/: metadata.py
.ambient-package-update/templates/snippets/: content.tpl
.github/workflows/: ci.yml  quality-gate.yml  release.yml
ambient_toolbox/: __init__.py  apps.py  context_manager.py  context_processors.py  managers.py  models.py
ambient_toolbox/admin/model_admins/: classes.py  inlines.py  mixins.py
ambient_toolbox/admin/views/: forms.py  mixins.py
ambient_toolbox/autodiscover/: __init__.py  logger.py  registry.py  settings.py  utils.py
ambient_toolbox/drf/: fields.py  serializers.py  tests.py
ambient_toolbox/gitlab/: coverage.py
ambient_toolbox/graphql/forms/: mutations.py
ambient_toolbox/graphql/schemes/: mutations.py
ambient_toolbox/graphql/sentry/: utils.py
ambient_toolbox/graphql/tests/: base_test.py
ambient_toolbox/import_linter/: projections.py  services.py  settings.py  system_checks.py
ambient_toolbox/mail/backends/: allowlist_smtp.py  whitelist_smtp.py
ambient_toolbox/management/commands/: create_translation_file.py  detect_ghost_tables.py  install_permission_fixtures.py  update_import_linter_contracts.py  validate_gitlab_coverage.py  validate_import_linter_contracts.py  validate_test_structure.py  validate_translation_file_integrity.py
ambient_toolbox/middleware/: current_request.py  current_user.py
ambient_toolbox/mixins/: bleacher.py  models.py
ambient_toolbox/permissions/fixtures/: declarations.py  helpers.py  services.py
ambient_toolbox/selectors/: base.py  permission.py
ambient_toolbox/sentry/: helpers.py  reporter.py
ambient_toolbox/services/: custom_scrubber.py
ambient_toolbox/static_role_permissions/: auth_backend.py  permissions.py  settings.py  system_check.py
ambient_toolbox/system_checks/: atomic_docs.py  backend_imports.py  model_field_name_conventions.py  model_relation_conventions.py  settings.py
ambient_toolbox/templatetags/: ai_date_tags.py  ai_email_tags.py  ai_file_tags.py  ai_number_tags.py  ai_object_tags.py  ai_string_tags.py
ambient_toolbox/tests/: mixins.py
ambient_toolbox/tests/fixtures/: block_external_requests.py
ambient_toolbox/tests/structure_validator/: settings.py  test_structure_validator.py
ambient_toolbox/tests/test_runners/: block_external_requests.py
ambient_toolbox/utils/: __init__.py  date.py  file.py  log_whodid.py  model.py  named_tuple.py  string.py
ambient_toolbox/validators/auth_password/: special_chars.py
ambient_toolbox/view_layer/: form_mixins.py  formset_mixins.py  formset_view_mixin.py  htmx_mixins.py  mixins.py  views.py
ambient_toolbox/view_layer/tests/: mixins.py
docs/: conf.py  index.rst
docs/features/: admin.md  autodiscovery.md  cleanup.md  context_manager.md  context_processors.md  database_anonymisation.md  djangorestframework.md  gitlab.md  graphql.md  import_linter.md  mail.md  managers.md  mixins.md  models.md  permissions.md  selectors.md  sentry.md  services.md  setup.md  static_role_permissions.md  system_checks.md  tests.md  translations.md  validators.md  view-layer.md
docs/features/utils/: cache.md  date.md  math.md  model.md  named_tuple.md  string.md
scripts/unix/: install_requirements.sh
scripts/windows/: install_requirements.ps1
testapp/: forms.py  managers.py  models.py  more_registered_functions.py  permissions.py  selectors.py  urls.py  views.py
testapp/api/: serializers.py  urls.py  views.py
testapp/autodiscover/: registered_functions.py
testapp/handlers/commands/: test_commands.py
testapp/migrations/: 0001_initial.py  0002_alter_mypermissionmodelmixin_options.py  0002_bleachermixinmodel.py  0002_modelwithoutrelatednameonfieldandmeta_and_more.py  0003_modelwithgetornonemanagermodel.py
testapp/templates/: 403.html
tests/: test_admin_forms.py  test_admin_inlines.py  test_admin_model_admins_classes.py  test_admin_view_mixins.py  test_apps.py  test_context_manager.py  test_context_processors.py  test_log_whodid.py  test_managers.py  test_math.py  test_middleware.py  test_models.py  test_rest_api_mixins.py  test_scrubbing_service.py  test_sentry_helper.py  test_utils_cache.py  test_utils_date.py  test_utils_file.py  test_utils_model.py  test_utils_named_tuple.py  test_utils_string.py
tests/admin/model_admin_mixins/: test_classes.py  (+7 more)
tests/ambient_toolbox/: test_test_structure_validator.py
tests/autodiscover/: test_logger.py  test_registry.py  test_settings.py  test_utils.py
tests/drf/: test_fields.py  test_serializers.py
tests/gitlab/: test_coverage.py
tests/graphql/: test_base_test.py  test_forms_mutations.py  test_schemes_mutations.py  test_sentry_utils.py  test_sentry_views.py
tests/import_linter/: test_projections.py  test_services.py  test_settings.py
tests/mail/: test_mail_backends.py
tests/management_commands/: test_create_translation_file.py
tests/mixins/: test_bleacher.py  test_validation.py
tests/permissions/: test_install_permission_fixtures_command.py
tests/query_selectors/: test_base.py
tests/selectors/: test_permission.py
tests/sentry/: mock_data.py  test_sentry_helper.py  test_sentry_reporter.py
tests/static_role_permissions/: dummy_permissions.py  test_settings.py  test_static_role_permissions.py  test_system_check.py
tests/system_checks/: test_atomic_docs.py  test_backend_imports.py  test_model_field_name_conventions.py  test_model_relation_conventions.py
tests/templatetags/: test_ai_date_tags.py  test_ai_email_tags.py  test_ai_file_tags.py  test_ai_helper_tags.py  test_ai_number_tags.py  test_ai_object_tags.py  test_ai_string_tags.py
tests/test_runners/: test_block_external_requests.py
tests/tests/: test_mail_backends.py
tests/view_layer/: test_base_view_permission_test_mixin.py  test_form_mixins.py  test_formset_mixins.py  test_formset_view_mixin.py  test_htmx_response_mixin.py  test_meta_mixins.py  test_views.py
(+20 files in other folders)
