[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambient-toolbox"
authors = [
    {'name' = 'Ambient Digital', 'email' = 'hello@ambient.digital'},
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dynamic = ["version"]
description = "Python toolbox of Ambient Digital containing an abundance of useful tools and gadgets."
license = {"file" = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    'Django>=4.2',
    'python-dateutil>=2.5.3',
]

[project.entry-points."djangoq.errorreporters"]
ambient-djangoq2-sentry = "ambient_toolbox.sentry.reporter:DjangoQ2SentryReporter"

[project.optional-dependencies]
dev = [
   'typer~=0.19',
   'pytest-cov~=7.0',
   'pytest-django~=4.11',
   'pytest-mock~=3.15',
   'pre-commit~=4.3',
   'sphinx~=7.4',
   'sphinx-rtd-theme~=3.0',
   'm2r2~=0.3',
   'uv~=0.9',
   'ambient-package-update',
   'gevent~=25.1',
   'httpx~=0.28',
   'freezegun~=1.5',
]
drf = [
   'djangorestframework>=3.8.2',
]
graphql = [
   'graphene-django>=2.2.0',
   'django-graphql-jwt>=0.2.1',
]
import-linter = [
   'tomlkit~=0.13',
]
bleacher = [
   'nh3>=0.2,<1',
]
gitlab-coverage = [
   'httpx~=0.28',
]
sentry = [
   'sentry-sdk>=1.19.1',
]
view-layer = [
   'django-crispy-forms>=1.4.0',
]

[project.urls]
'Homepage' = 'https://github.com/ambient-innovation/ambient-toolbox/'
'Documentation' = 'https://ambient-toolbox.readthedocs.io/en/latest/index.html'
'Maintained by' = 'https://ambient.digital/'
'Bugtracker' = 'https://github.com/ambient-innovation/ambient-toolbox/issues'
'Changelog' = 'https://ambient-toolbox.readthedocs.io/en/latest/features/changelog.html'

[tool.ruff]
lint.select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "N",       # pep8-naming
    "I",       # isort
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "DTZ",     # flake8-datetimez
    "DJ",      # flake8-django
    "TD",      # flake8-to-do
    "RUF",     # Ruff-specific rules
    "YTT",     # Avoid non-future-prove usages of "sys"
    "C4",      # Checks for unnecessary conversions
    "PIE",     # Bunch of useful rules
    "INT",     # Validates your gettext translation strings
    "PERF",    # PerfLint
    "PGH",     # No all-purpose "# noqa" and eval validation
    "PL",      # PyLint
    "LOG",     # flake8-logging
    "TID",     # flake8-tidy-imports
    "PLR2004", # Magic numbers
    "BLE",     # Checks for except clauses that catch all exceptions
    "ANN401",  # Checks that function arguments are annotated with a more specific type than Any
    "TRY",     # Clean try/except
    "ERA",     # Commented out code
    "INP",     # Ban PEP-420 implicit namespace packages
    "C90",     # McCabe code complexity
    "FURB",    # Refurbish Python code
]
lint.ignore = [
    "A005", # ruff flags valid Python modules
    "N999", # Project name contains underscore, not fixable
    "A003", # Django attributes shadow python builtins
    "DJ001", # Django model text-based fields shouldn't be nullable
    "B905", # Can be enabled when Python <=3.9 support is dropped
    "DTZ001", # TODO will affect "tz_today()" method
    "DTZ005", # TODO will affect "tz_today()" method
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "TD002", # Missing author in TO-DOs
    "TD003", # Missing issue link on the line following this TO-DOs
    "TRY002", # Checks for code that raises Exception directly.
    "TRY003", # Checks for long exception messages that are not defined in the exception class itself.
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # Pyflakes
    "N",       # pep8-naming
    "I",       # isort
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "DTZ",     # flake8-datetimez
    "DJ",      # flake8-django
    "TD",      # flake8-to-do
    "RUF",     # Ruff-specific rules
    "YTT",     # Avoid non-future-prove usages of "sys"
    "C4",      # Checks for unnecessary conversions
    "PIE",     # Bunch of useful rules
    "INT",     # Validates your gettext translation strings
    "PERF",    # PerfLint
    "PGH",     # No all-purpose "# noqa" and eval validation
    "PL",      # PyLint
    "LOG",     # flake8-logging
    "TID",     # flake8-tidy-imports
    "PLR2004", # Magic numbers
    "BLE",     # Checks for except clauses that catch all exceptions
    "ANN401",  # Checks that function arguments are annotated with a more specific type than Any
    "TRY",     # Clean try/except
    "ERA",     # Commented out code
    "INP",     # Ban PEP-420 implicit namespace packages
    "C90",     # McCabe code complexity
    "FURB",    # Refurbish Python code
]
lint.unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.13
target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  # Allow seemingly unused imports
  "F401",
]
"**/tests/**/test_*.py" = [
  # Allow boolean positional params in tests (for assertIs())
  "FBT003",
]
"scripts/*.py" = [
  # Checks for packages that are missing an __init__.py file
  "INP001",
]
".ambient-package-update/*.py" = [
  # Checks for packages that are missing an __init__.py file
  "INP001",
]
"docs/*.py" = [
  # Checks for packages that are missing an __init__.py file
  "INP001",
]
"**/tests/missing_init/*.py" = [
  # Missing by design for a test case
  "INP001",
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1.0.0"]
env_list = ["django42", "django52", "django60", ]

[tool.tox.env_run_base]
# Django deprecation overview: https://www.djangoproject.com/download/
package = "wheel"
wheel_build_env = ".pkg"
runner = "uv-venv-lock-runner"
extras = ["dev", "drf", "graphql", "import-linter", "bleacher", "gitlab-coverage", "sentry", "view-layer", ]
commands = [
    ["pytest", "--cov=ambient_toolbox", "--cov-report=term", "--cov-report=xml", "--ds", "settings", "tests"]
]

[tool.tox.env.django42]
deps = ["Django==4.2.*"]

[tool.tox.env.django52]
deps = ["Django==5.2.*"]

[tool.tox.env.django60]
deps = ["Django==6.0.*"]

[tool.tox.gh_actions.python]
"3.10" = "py310"
"3.11" = "py311"
"3.12" = "py312"
"3.13" = "py313"
"3.14" = "py314"

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "ambient_toolbox",
    "tests",
]
omit = [
  "setup.py",
  "*_test.py",
  "tests.py",
  "testapp/*",
  "tests/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't check type hinting imports
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[tool.coverage.path]
source = [
    "ambient_toolbox",
    ".tox/**/site-packages",
]

[tool.hatch.version]
path = "ambient_toolbox/__init__.py"
